--- a/src/app/resp/components/tp/tp.component.html
+++ b/src/app/resp/components/tp/tp.component.html
@@ -14,6 +14,11 @@
         </div>
     </div>
 
+    <div class="-ml-3 mb-3">
+        <p-button label="Retour" [text]="true" icon="pi pi-arrow-left"
+            routerLink="/resp/cohort/td/{{ TPInfo.td.id }}"></p-button>
+    </div>
+
     <p-tabView>
         <p-tabPanel>
             <ng-template pTemplate="header">
