--- a/src/app/resp/components/training/training.component.html
+++ b/src/app/resp/components/training/training.component.html
@@ -14,6 +14,11 @@
         </div>
     </div>
 
+    <div class="-ml-3 mb-3">
+        <p-button label="Retour" [text]="true" icon="pi pi-arrow-left"
+            routerLink="/resp/cohort/promotion/{{ trainingInfo.promotion.id }}"></p-button>
+    </div>
+
     <p-tabView>
         <p-tabPanel>
             <ng-template pTemplate="header">
@@ -52,7 +57,11 @@
                 </ng-template>
                 <ng-template pTemplate="body" let-td>
                     <tr>
-                        <td>{{ td.name }}</td>
+                        <td>
+                            <div class="cursor-pointer" routerLink="/resp/cohort/td/{{ td.id_td }}">
+                                <span class="font-semibold hover:text-blue-500">{{ td.name }}</span>
+                            </div>
+                        </td>
                         <td>{{ td.student_count }}</td>
                         <td>{{ td.tp_count }}</td>
                         <td>
