--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,11 @@ body {
   margin: auto;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
 * {
