nouveau logo temporaire ?

--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -4,16 +4,17 @@
     style="width: 280px; z-index: 1000 !important">
     <div class="fixed flex flex-column h-full" style="width: 280px">
       <div class="flex align-items-center px-5 flex-shrink-0 gap-3 pt-1 cursor-pointer" routerLink="/dashboard">
-        <div>
+        <!-- <div>
           <img src="assets/images/logo-iut-shorted.png" style="width: 41px; height: 41px" />
         </div>
         <div class="flex-column">
           <h1 class="text-base">ENT</h1>
           <p class="-mt-2 text-sm">IUT de Montreuil</p>
-        </div>
+        </div> -->
+        <img src="assets/images/ent.png" width="90" class="mt-2 mb-2">
       </div>
       <div class="sidebar overflow-y-hidden mr-1 ml-1">
-        <ul class="list-none p-3 m-0">
+        <ul class="list-none pl-3 pr-3 pb-3 m-0">
           <li>
             <div pRipple class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer"
               pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
