--- a/src/app/admin/components/ressource-list/ressource-list.component.html
+++ b/src/app/admin/components/ressource-list/ressource-list.component.html
@@ -1,25 +1,15 @@
 <div class="container">
   <!-- Remplacer 'app-create-training' par votre composant de création de ressource -->
-  <app-create-ressource
-    *ngIf="displayCreateRessources"
-    [displayCreateRessourceDialog]="displayCreateRessources"
-    [trainings]="trainings"
-    (ressourceCreated)="onRessourceCreated($event)"
-  ></app-create-ressource>
-  <div
-    class="flex align-item-center border-round p-4 relative"
-    style="background-color: rgb(239, 244, 255)"
-  >
+  <app-create-ressource *ngIf="displayCreateRessources" [displayCreateRessourceDialog]="displayCreateRessources"
+    [trainings]="trainings" (ressourceCreated)="onRessourceCreated($event)"></app-create-ressource>
+  <div class="flex align-item-center border-round p-4 relative" style="background-color: rgb(239, 244, 255)">
     <div>
-      <h1 class="text-2xl font-semibold">Gestion des Ressources</h1>
+      <h1 class="text-2xl font-semibold">Gestion des ressources</h1>
       <p class="text-900 -mt-2">Créer, modifier ou supprimer des ressources.</p>
     </div>
     <!-- Ajoutez une image ou une icône appropriée -->
-    <div
-      class="absolute hidden sm:hidden md:block"
-      style="top: -10px; right: 50px"
-    >
-      <img src="/path/to/your/icon.png" alt="icon" width="180px" />
+    <div class="absolute hidden sm:hidden md:block" style="top: -10px; right: 50px">
+      <img src="/assets/images/3dicons/travel.png" alt="icon" width="180px" />
     </div>
   </div>
 
@@ -31,36 +21,20 @@
       <div>
         <span class="p-input-icon-left">
           <i class="pi pi-search mb-3"></i>
-          <input
-            type="text"
-            pInputText
-            [(ngModel)]="searchQuery"
-            (input)="onSearch()"
-            placeholder="Rechercher une ressource"
-          />
+          <input type="text" pInputText [(ngModel)]="searchQuery" (input)="onSearch()"
+            placeholder="Rechercher une ressource" />
         </span>
       </div>
 
-      <p-button
-        icon="pi pi-plus"
-        label="Créer une ressource"
-        class="custom-button"
-        (click)="showCreateRessourceDialog()"
-      ></p-button>
+      <p-button icon="pi pi-plus" label="Créer une ressource" class="custom-button"
+        (click)="showCreateRessourceDialog()"></p-button>
     </div>
 
     <!-- Table des Ressources avec PrimeNG -->
-    <p-table
-      *ngIf="!isLoading; else tableSkeleton"
-      #dt
-      [value]="filteredRessources"
-      [paginator]="true"
-      [rows]="10"
-      [responsiveLayout]="scroll"
-      [showCurrentPageReport]="true"
+    <p-table *ngIf="!isLoading; else tableSkeleton" #dt [value]="filteredRessources" [paginator]="true" [rows]="10"
+      [responsiveLayout]="scroll" [showCurrentPageReport]="true"
       currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} ressources"
-      [rowsPerPageOptions]="[5, 10, 20, 50]"
-      >>
+      [rowsPerPageOptions]="[5, 10, 20, 50]">>
       <ng-template pTemplate="header">
         <tr>
           <th>ID</th>
@@ -68,16 +42,10 @@
           <th>Couleur</th>
           <th>
             Parcours
-            <p-dropdown
-              [options]="trainings"
-              [(ngModel)]="selectedTrainingId"
-              optionLabel="name"
-              optionValue="id"
-              placeholder="Sélectionner un parcours"
-              (onChange)="filterByTraining()"
-            ></p-dropdown>
+            <p-dropdown [options]="trainings" [(ngModel)]="selectedTrainingId" optionLabel="name" optionValue="id"
+              placeholder="Sélectionner un parcours" (onChange)="filterByTraining()" appendTo="body"></p-dropdown>
           </th>
-          <th>Actions</th>
+          <th></th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-ressource>
@@ -85,32 +53,17 @@
           <td>#{{ ressource.id }}</td>
           <td>
             <div *ngIf="!ressource.is_editing">{{ ressource.name }}</div>
-            <input
-              *ngIf="ressource.is_editing"
-              type="text"
-              [(ngModel)]="ressource.name"
-            />
+            <input *ngIf="ressource.is_editing" type="text" [(ngModel)]="ressource.name" />
           </td>
           <td>
-            <span
-              *ngIf="!ressource.is_editing"
-              class="color-indicator"
-              [style.background]="ressource.color"
-            ></span>
-            <input
-              *ngIf="ressource.is_editing"
-              type="color"
-              [(ngModel)]="ressource.color"
-            />
+            <span *ngIf="!ressource.is_editing" class="color-indicator" [style.background]="ressource.color"></span>
+            <input *ngIf="ressource.is_editing" type="color" [(ngModel)]="ressource.color" />
           </td>
           <td>
             <div *ngIf="!ressource.is_editing">
               {{ ressource.training_name }}
             </div>
-            <select
-              *ngIf="ressource.is_editing"
-              [(ngModel)]="ressource.id_Training"
-            >
+            <select *ngIf="ressource.is_editing" [(ngModel)]="ressource.id_Training">
               <option *ngFor="let training of trainings" [value]="training.id">
                 {{ training.name }}
               </option>
@@ -118,47 +71,16 @@
           </td>
 
           <td class="flex justify-content-evenly">
-            <div
-              *ngIf="!ressource.is_editing"
-              class="flex align-items-center justify-content-center"
-            >
-              <button
-                pButton
-                pRipple
-                pTooltip="Modifier"
-                tooltipPosition="top"
-                type="button"
-                icon="pi pi-pencil"
-                class="p-button-rounded p-button-text"
-                (click)="startEditing(ressource)"
-              ></button>
-              <button
-                pButton
-                pRipple
-                pTooltip="Supprimer"
-                tooltipPosition="top"
-                icon="pi pi-trash"
-                class="p-button-rounded p-button-text p-button-danger"
-                (click)="confirmDelete(ressource)"
-              ></button>
+            <div *ngIf="!ressource.is_editing" class="flex align-items-center justify-content-center">
+              <button pButton pRipple pTooltip="Modifier" tooltipPosition="top" type="button" icon="pi pi-pencil"
+                class="p-button-rounded p-button-text" (click)="startEditing(ressource)"></button>
+              <button pButton pRipple pTooltip="Supprimer" tooltipPosition="top" icon="pi pi-trash"
+                class="p-button-rounded p-button-text p-button-danger" (click)="confirmDelete(ressource)"></button>
             </div>
-            <button
-              *ngIf="ressource.is_editing"
-              pButton
-              pRipple
-              type="button"
-              label="Sauvegarder"
-              (click)="confirmChanges(ressource)"
-            ></button>
-            <button
-              *ngIf="ressource.is_editing"
-              pButton
-              pRipple
-              type="button"
-              label="Annuler"
-              class="p-button-secondary"
-              (click)="cancelEdit(ressource)"
-            ></button>
+            <button *ngIf="ressource.is_editing" pButton pRipple type="button" label="Sauvegarder"
+              (click)="confirmChanges(ressource)"></button>
+            <button *ngIf="ressource.is_editing" pButton pRipple type="button" label="Annuler"
+              class="p-button-secondary" (click)="cancelEdit(ressource)"></button>
           </td>
         </tr>
       </ng-template>
