--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -135,7 +135,7 @@
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Vie scolaire</span>
                   </a>
                 </li>
-                <li>
+                <li routerLink="/reminders">
                   <a pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                     routerLinkActive="active-navlink">
@@ -280,41 +280,14 @@
               </div>
               <ul class="list-none p-0 m-0 overflow-hidden">
                 <li>
+
+                <li routerLink="/admin/users">
                   <a pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                    pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
-                    leaveActiveClass="slideup" routerLinkActive="active-navlink">
+                    routerLinkActive="active-navlink">
                     <i class="pi pi-users mr-2" routerLinkActive="active-navlink"></i>
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Utilisateurs</span>
-                    <i class="pi pi-chevron-down ml-auto" style="font-size: 0.8rem"></i>
                   </a>
-                  <ul
-                    class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
-                    <li routerLink="admin/users">
-                      <a pRipple
-                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                        routerLinkActive="active-navlink">
-                        <i class="pi pi-user mr-2" routerLinkActive="active-navlink"></i>
-                        <span class="font-medium text-sm" routerLinkActive="active-navlink">Utilisateurs</span>
-                      </a>
-                    </li>
-                    <li routerLink="admin/students">
-                      <a pRipple
-                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                        routerLinkActive="active-navlink">
-                        <i class="pi pi-user mr-2" routerLinkActive="active-navlink"></i>
-                        <span class="font-medium text-sm" routerLinkActive="active-navlink">Étudiants</span>
-                      </a>
-                    </li>
-                    <li routerLink="admin/teachers">
-                      <a pRipple
-                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                        routerLinkActive="active-navlink">
-                        <i class="pi pi-user mr-2" routerLinkActive="active-navlink"></i>
-                        <span class="font-medium text-sm" routerLinkActive="active-navlink">Enseignants</span>
-                      </a>
-                    </li>
-                  </ul>
                 </li>
 
                 <li routerLink="/admin/degrees">
@@ -331,6 +304,14 @@
                     routerLinkActive="active-navlink">
                     <i class="pi pi-folder mr-2" routerLinkActive="active-navlink"></i>
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Parcours</span>
+                  </a>
+                </li>
+                <li routerLink="/admin/ressources">
+                  <a pRipple
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
+                    routerLinkActive="active-navlink">
+                    <i class="pi pi-briefcase mr-2" routerLinkActive="active-navlink"></i>
+                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Ressources</span>
                   </a>
                 </li>
                 <li routerLink="/admin/classrooms">
