--- a/src/app/admin/components/form/add-students-csv/add-students-csv.component.html
+++ b/src/app/admin/components/form/add-students-csv/add-students-csv.component.html
@@ -68,7 +68,7 @@
 <p-dialog [(visible)]="displayModalPassword" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false" [contentStyle]="{ 'text-align': 'center' }"  [closable]="false">
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%;">
       <div style="margin-top: 2%">
-        <p><i class="pi pi-exclamation-triangle" style="font-size: 2rem"></i>Veuillez à bien sauvegarder les mots de passe, ils ne seront pas récupérable</p>
+        <p><i class="pi pi-exclamation-triangle" style="font-size: 2rem"></i>Veuillez à bien sauvegarder les mots de passe, ils ne seront pas récupérables</p>
         <!------->
         <div class="card">
             <p-table #dt [columns]="cols" [value]="allPassword" selectionMode="multiple"  [exportHeader]="'customExportHeader'" [tableStyle]="{ 'min-width': '50rem' }">
