--- a/src/app/settings/components/settings-layout/settings-layout.component.html
+++ b/src/app/settings/components/settings-layout/settings-layout.component.html
@@ -2,42 +2,57 @@
 <div class="container">
   <div
     class="flex align-items-center border-round p-4 relative mb-6"
-    style="background-color: rgb(255, 247, 234)"
+    style="background-color: rgb(242, 242, 242)"
   >
     <div>
       <h1 class="text-2xl font-semibold">Paramètres</h1>
-      <p class="text-900 font-medium"></p>
+      <p class="text-900 font-medium">Gérer votre compte utilisateur</p>
     </div>
     <div
       class="absolute hidden sm:hidden md:block"
       style="top: -14px; right: 50px"
     >
-      <img src="/assets/images/3dicons/rocket.png" alt="cube" width="180px" />
+      <img src="/assets/images/3dicons/setting.png" alt="cube" width="180px" />
     </div>
   </div>
 
-  <h1>Paramètres</h1>
+  <p-tabView>
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <i class="pi pi-user mr-2"></i> Compte
+      </ng-template>
+    </p-tabPanel>
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <i class="pi pi-bell mr-2"></i> Notifications
+      </ng-template>
 
-  <form [formGroup]="settingsForm" (ngSubmit)="updateSettings()">
-    <p>Sélectionnez les options que vous souhaitez:</p>
+      <form [formGroup]="settingsForm" (ngSubmit)="updateSettings()">
+        <p>Sélectionnez les options que vous souhaitez:</p>
 
-    <div>
-      <label>
-        Notification par e-mail
-        <input type="checkbox" formControlName="notificationMail" />
-      </label>
-    </div>
-    <div>
-      <label>
-        Notifications sur le site web
-        <input type="checkbox" formControlName="notificationWebsite" />
-      </label>
-    </div>
-
-    <div [style.margin-top.px]="20">
-      <p-button type="submit">Enregistrer</p-button>
-    </div>
-  </form>
+        <div>
+          <label>
+            Notification par e-mail
+            <input
+              type="checkbox"
+              formControlName="notificationMail"
+              (change)="updateSettings()"
+            />
+          </label>
+        </div>
+        <div>
+          <label>
+            Notifications sur le site web
+            <input
+              type="checkbox"
+              formControlName="notificationWebsite"
+              (change)="updateSettings()"
+            />
+          </label>
+        </div>
+      </form>
+    </p-tabPanel>
+  </p-tabView>
 </div>
 
 <p-toast></p-toast>
