--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -722,9 +722,9 @@
           leaveActiveClass="slideup"
         >
           <img
-            src="assets/images/sching.gif"
+            src="assets/images/user.png"
             class="mr-2"
-            style="width: 34px; height: 34px"
+            style="width: 28px; height: 28px"
           />
           <div class="flex flex-column">
             <span class="font-medium text-900 text-sm"
@@ -1012,11 +1012,13 @@
             pRipple
             class="flex p-3 lg:px-3 lg:py-2 align-items-center hover:surface-100 font-medium border-round cursor-pointer transition-duration-150 transition-colors"
           >
-            <img
-              src="assets/images/sching.gif"
-              class="mr-3 lg:mr-0"
-              style="width: 32px; height: 32px"
-            />
+            <div class="overflow:hidden">
+              <img
+                src="assets/images/user.png"
+                class="mr-3 lg:mr-0"
+                style="width: 24px; height: 24px"
+              />
+            </div>
             <div class="block lg:hidden">
               <div class="text-900 font-medium text-sm">
                 {{ first_name }} {{ last_name }}
