--- a/src/app/resp/components/create-course/create-course.component.html
+++ b/src/app/resp/components/create-course/create-course.component.html
@@ -41,7 +41,7 @@
       ></p-dropdown>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" *ngIf="selectedTrainingId !== null">
       <label for="resource">Ressource</label>
       <p-dropdown
         id="resource"
