--- a/src/app/resp/components/manage-courses/manage-courses.component.html
+++ b/src/app/resp/components/manage-courses/manage-courses.component.html
@@ -26,7 +26,7 @@
           (onChange)="onTrainingChange()"
           optionLabel="name"
           optionValue="id"
-          placeholder="Sélectionnez un training"
+          placeholder="Sélectionnez un parcours"
         ></p-dropdown>
       </div>
     </div>
