--- a/src/app/resp/components/create-course/create-course.component.html
+++ b/src/app/resp/components/create-course/create-course.component.html
@@ -1,45 +1,13 @@
 <p-card header="Créer un cours">
-  <form (submit)="CreateCourse()" class="create-course-form">
-    <div class="form-group">
-      <label for="degree">Formation</label>
-      <p-dropdown
-        id="degree"
-        [options]="degrees"
-        (onChange)="onDegreeChange($event.value)"
-        optionLabel="name"
-        optionValue="id"
-        placeholder="Sélectionnez une formation"
-      ></p-dropdown>
-    </div>
-
-    <div class="form-group" *ngIf="selectedDegreeId !== null">
-      <label for="promotion">Promotion</label>
-      <p-dropdown
-        id="promotion"
-        [options]="filteredPromotions"
-        [(ngModel)]="selectedPromotionId"
-        (onChange)="onPromotionChange($event.value)"
-        optionLabel="uniqueLabel"
-        optionValue="id"
-        placeholder="Sélectionnez une promotion"
-      ></p-dropdown>
-    </div>
-
+  <form
+    *ngIf="resources && resources.length > 0; else noData"
+    (submit)="CreateCourse()"
+    class="create-course-form"
+  >
     <div
       class="form-group"
       *ngIf="selectedPromotionId !== null && trainings != []"
-    >
-      <label for="training">Parcours</label>
-      <p-dropdown
-        id="training"
-        [options]="trainings"
-        [(ngModel)]="selectedTrainingId"
-        (onChange)="onTrainingChange($event.value)"
-        optionLabel="name"
-        optionValue="id"
-        placeholder="Sélectionnez un Parcours"
-      ></p-dropdown>
-    </div>
+    ></div>
 
     <div class="form-group">
       <label for="resource">Ressource</label>
@@ -108,3 +76,8 @@
   </form>
 </p-card>
 <p-toast></p-toast>
+<ng-template #noData>
+  <p class="no-data-message">
+    Veuillez sélectionner une promotion, un parcours, un TD ou un TP.
+  </p>
+</ng-template>
