correction du bug qui bloquais l'ouverture du modal

--- a/src/app/resp/components/course-details-modal/course-details-modal.component.html
+++ b/src/app/resp/components/course-details-modal/course-details-modal.component.html
@@ -3,6 +3,7 @@
   [(visible)]="display"
   [modal]="true"
   [style]="{ width: '50vw' }"
+  (onHide)="onClose()"
 >
   <div class="course-details">
     <p-card>
