--- a/src/app/resp/components/manage-courses/manage-courses.component.html
+++ b/src/app/resp/components/manage-courses/manage-courses.component.html
@@ -101,4 +101,5 @@
   *ngIf="selectedCourseId"
   [selectedCourseId]="selectedCourseId"
   (close)="resetModal()"
+  (courseDeleted)="removeEvent($event)"
 ></app-course-details-modal>
