--- a/src/app/resp/components/manage-courses/manage-courses.component.html
+++ b/src/app/resp/components/manage-courses/manage-courses.component.html
@@ -8,6 +8,7 @@
           optionLabel="name"
           optionValue="id"
           placeholder="Sélectionnez une formation"
+          name="degreeDropdown"
         ></p-dropdown>
 
         <p-dropdown
@@ -17,6 +18,7 @@
           optionLabel="uniqueLabel"
           optionValue="id"
           placeholder="Sélectionnez une promotion"
+          name="promotionDropdown"
         ></p-dropdown>
 
         <p-dropdown
@@ -25,7 +27,7 @@
           [(ngModel)]="selectedSemester"
           placeholder="Sélectionnez un semestre"
           (onChange)="onSemesterChange()"
-          (optionValue)="(selectedSemester)"
+          name="semesterDropdown"
         ></p-dropdown>
 
         <p-dropdown
@@ -36,6 +38,7 @@
           optionLabel="name"
           optionValue="id"
           placeholder="Sélectionnez un parcours"
+          name="trainingDropdown"
         ></p-dropdown>
       </div>
     </div>
