ajout de la possibilité de mettre une ou plusieurs classes pour un cours et un ou plusieurs profs pour un cours

--- a/src/app/resp/components/course-details-modal/course-details-modal.component.html
+++ b/src/app/resp/components/course-details-modal/course-details-modal.component.html
@@ -13,7 +13,7 @@
           <div class="info-item">
             <i class="pi pi-fw pi-id-card info-icon"></i>
             <span class="info-label">ID du cours:</span>
-            <span class="info-value">{{ course.courses.id }}</span>
+            <span class="info-value">"{{ course.courses.id }}"</span>
           </div>
           <div class="info-item">
             <i class="pi pi-fw pi-calendar info-icon"></i>
